tried adding colours but didn't work, changed laporan.tex

--- a/Laporan/laporan.tex
+++ b/Laporan/laporan.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
-
+\usepackage[a4paper, portrait, left=2cm, right=2cm, bottom=2cm, top=3cm]{geometry}
 \begin{document}
-Hello, World!
+    \title{Laporan Tugas Pemrograman TLS 2024}
+    \author{Rayya Tegar Amisani}
 \end{document}
